Event_Volunteer_Management/unpackaged/objects/Volunteer__c.object
<CustomObject>
    <fields>
        <fullName>Avialability__c</fullName>
        <label>Avialability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>Month ends</fullName>
                </value>
                <value>
                    <fullName>Year ends</fullName>
                </value>
                <value>
                    <fullName>2nd n 4th saturdays</fullName>
                </value>
                <value>
                    <fullName>Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Voluteer Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Volunteer Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Aid</fullName>
                </value>
                <value>
                    <fullName>Teaching</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Status__c</fullName>
        <label>Volunteer_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Not Intrested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Volunteer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Volunteer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>